--- a/less/index.less
+++ b/less/index.less
@@ -3,7 +3,7 @@
 
 #showcase-container{
 	position:relative;
-    top:146px;	
+    top:118px;	
 }
 
 @media (min-width: 768px){
@@ -45,12 +45,12 @@
 {
 	padding:0px !important;	
     position:relative !important;
-	top:78px !important;
+	top:118px !important;
 }
 
 @media (min-width: 768px){
 	#content-wrapper{
-		top:146px;	
+		top:78px !important;	
 	}
 }
 		
